<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/s"
        android:text="@string/s"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        android:text="@string/heading"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/s" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pan_number_tv"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/pan_number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pan_number"
        android:hint="@string/pan_hint"
        android:background="@drawable/round_corner_background"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:maxLength="10"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/pan_number_tv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/birth_date"
        app:layout_constraintTop_toBottomOf="@+id/pan_number"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/birth_date" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/day"
        android:hint="@string/day"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="18dp"
        android:paddingVertical="12dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_date"
        app:layout_constraintWidth_percent="0.20"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:background="@drawable/date_background" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/month"
        android:hint="@string/month"
        android:paddingHorizontal="18dp"
        android:paddingVertical="12dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:enabled="false"
        android:background="@drawable/date_background"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintWidth_percent="0.20"
        app:layout_constraintLeft_toRightOf="@+id/day"
        app:layout_constraintRight_toLeftOf="@+id/year"
        app:layout_constraintTop_toTopOf="@+id/day"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/year"
        android:hint="@string/year"
        android:paddingHorizontal="18dp"
        android:paddingVertical="12dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="4"
        android:enabled="false"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:background="@drawable/date_background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/month"
        app:layout_constraintTop_toTopOf="@id/day" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:text="@string/info"
        app:layout_constraintBottom_toTopOf="@+id/next_bt"
        android:layout_marginBottom="15dp" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next_bt"
        android:text="next"
        android:enabled="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/no_pan"
        android:layout_marginBottom="15dp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_pan"
        android:text="@string/no_pan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:textColor="@color/purple_500"/>



</androidx.constraintlayout.widget.ConstraintLayout>